added navbar template

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,7 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">ShitWish</a>
+    <div class="navbar-right sign-in">
+        <a href="#">Sign in with Google</a>
+        <fa-icon [icon]="faSignInAlt"></fa-icon>
+    </div>
+</nav>
