--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-search-bar></app-search-bar>
 <div class="container-fluid">
   <div class="row">
     <div class="col-9">
