--- a/src/app/main/product-list/search-bar/search-bar.component.html
+++ b/src/app/main/product-list/search-bar/search-bar.component.html
@@ -1,3 +1,6 @@
-<p>
-  search-bar works!
-</p>
+<div class="search-bar">
+    <form>
+        <input type="text" placeholder="Search.." name="search">
+        <button type="submit"><fa-icon [icon]="faSearch"></fa-icon></button>
+    </form>
+</div>
