--- a/src/app/main/product-list/product/product.component.html
+++ b/src/app/main/product-list/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 16rem;">
+<div class="card">
     <img class="card-img-top" [src]="product.imageUrl" alt="Card image cap">
     <div class="card-body">
         <h3 class="card-title">{{product.name}}</h3>
