--- a/src/app/main/product-list/product-list.component.html
+++ b/src/app/main/product-list/product-list.component.html
@@ -1,1 +1,3 @@
-<app-product></app-product>
+<div *ngFor="let product of productList" class="p-2">
+    <app-product [product]="product"></app-product>
+</div>
