added routerLink to navbar brand

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">ShitWish</a>
+    <a class="navbar-brand" routerLink="/shopping-list">ShitWish</a>
     <div class="navbar-right sign-in">
         <a href="#">Sign in with Google</a>
         <fa-icon [icon]="faSignInAlt"></fa-icon>
