added grid to product list and scrolling to long descriptions

--- a/src/app/main/product-list/product/product.component.css
+++ b/src/app/main/product-list/product/product.component.css
@@ -6,4 +6,11 @@
 
 .card {
     width: 16rem;
+    height: auto;
+}
+
+.desc {
+    height: 100px;
+    overflow-y: scroll;
+    overflow-scrolling: auto;
 }
