--- a/src/app/main/product-list/product-list.component.html
+++ b/src/app/main/product-list/product-list.component.html
@@ -1,3 +1,6 @@
-<div *ngFor="let product of productList" class="p-2">
-    <app-product [product]="product"></app-product>
+<div class="grid">
+    <div *ngFor="let product of productList">
+        <app-product [product]="product"></app-product>
+    </div>
 </div>
+
