--- a/src/app/main/product-list/product/product.component.html
+++ b/src/app/main/product-list/product/product.component.html
@@ -2,7 +2,7 @@
     <img class="card-img-top" [src]="product.imageUrl" alt="Card image cap">
     <div class="card-body">
         <h3 class="card-title">{{product.name}}</h3>
-        <p class="card-text">{{product.description}}</p>
+        <p class="card-text desc">{{product.description}}</p>
         <div class="row">
             <div class="col-6">
                 <span class="float-left"><h4>{{product.price}} $</h4></span>
