--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,20 @@
-<p>
-  shopping-cart works!
-</p>
+<div class="cart" *ngFor="let product of products">
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-3">
+                    <img src="{{product.imageUrl}}" alt="">
+                </div>
+                <div class="col-6">
+                    <span class="float-left">
+                    <span>{{product.name}}</span>
+                    <h3>{{product.price}} $</h3>
+                    </span>
+                </div>
+                <div class="col-3">
+                    <fa-icon class="float-right" [icon]="faTrashAlt"></fa-icon>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
