Sign in and out buttons on navbar.

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,7 +1,13 @@
 .sign-in {
     color:white;
 }
-
+.sign-out {
+    color: red;
+}
 .sign-in a {
     color:white;
+}
+
+a:hover {
+    cursor: pointer;
 }
