--- a/src/app/main/product-list/search-bar/search-bar.component.html
+++ b/src/app/main/product-list/search-bar/search-bar.component.html
@@ -1,6 +1,6 @@
 <div class="search-bar">
-    <form>
-        <input type="text" placeholder="Search.." name="search">
-        <button type="submit"><fa-icon [icon]="faSearch"></fa-icon></button>
+    <form class="form-group">
+        <input type="text" class="form-control" placeholder="Search.." name="search">
+        <button type="submit" class="btn btn-primary"><fa-icon [icon]="faSearch"></fa-icon></button>
     </form>
 </div>
