--- a/src/app/main/checkout/checkout.component.html
+++ b/src/app/main/checkout/checkout.component.html
@@ -1,3 +1,26 @@
-<p>
-  checkout works!
-</p>
+<form class="pane center-block" #addressForm="ngForm" (ngSubmit)="onSubmit()">
+
+        <div class="headline">
+            <h2>Shipping Address</h2>
+        </div>
+        <div class="form-group">
+            <label for="shipping-zipcode">Zipcode</label>
+            <input type="text" class="form-control" id="shipping-zipcode" name="zipcode" ngModel required minlength="1">
+        </div>
+        <div class="form-group">
+            <label for="shipping-country">Country</label>
+            <input type="text" class="form-control" id="shipping-country" name="country" ngModel required minlength="1">
+        </div>
+        <div class="form-group">
+            <label for="shipping-city">City</label>
+            <input type="text" class="form-control" id="shipping-city" name="city" ngModel required minlength="1">
+        </div>
+        <div class="form-group">
+            <label for="shipping-street">Street</label>
+            <input type="text" class="form-control" id="shipping-street" name="street" ngModel required minlength="1">
+        </div>
+        <button type="submit" class="btn btn-block btn-success" [disabled]="!addressForm.valid">
+            Confirm Order
+        </button>
+
+</form>
