--- a/src/app/shopping-cart/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/shopping-cart/shopping-cart-item/shopping-cart-item.component.html
@@ -13,7 +13,8 @@
             <div class="col-2">
                 <div class="row align-items-center">
                     <div class="justify-content-center">
-                        <fa-icon class="float-right green-icon" [icon]="faPlus"></fa-icon>
+                        <span (click)="addItem()"><fa-icon class="float-right green-icon"
+                                                           [icon]="faPlus"></fa-icon></span>
                     </div>
                 </div>
                 <div class="row align-items-center">
@@ -21,12 +22,13 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="justify-content-center">
-                        <fa-icon class="float-right red-icon" [icon]="faMinus"></fa-icon>
+                        <span (click)="removeItem()"><fa-icon class="float-right red-icon"
+                                                              [icon]="faMinus"></fa-icon></span>
                     </div>
                 </div>
             </div>
             <div class="col-1">
-                <fa-icon class="alaign-self-end" [icon]="faTrashAlt"></fa-icon>
+                <span (click)="removeProduct()"><fa-icon class="alaign-self-end" [icon]="faTrashAlt"></fa-icon></span>
             </div>
         </div>
     </div>
