changing quantity button for products

--- a/src/app/shopping-cart/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/shopping-cart/shopping-cart-item/shopping-cart-item.component.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="row align-items-center">
-                    <div class="justify-content-center">5</div>
+                    <div class="justify-content-center"> {{amount}}</div>
                 </div>
                 <div class="row align-items-center">
                     <div class="justify-content-center">
