--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
-            <h4>Sum: 5000 $</h4>
+            <h4>Sum: {{ calculateSum() }} $</h4>
         </div>
         <div class="col-3 offset-2">
             <button (click)="clearCart()" class="btn btn-warning">Clear Cart</button>
