--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <app-navbar></app-navbar>
-<app-search-bar></app-search-bar>
 <div class="container-fluid">
   <div class="row">
     <div class="col-9">
       <app-main></app-main>
     </div>
-    <div class="col-3">
+      <div class="col-3 shopping-cart">
       <app-shopping-cart></app-shopping-cart>
     </div>
   </div>
