--- a/src/app/main/product-list/product-list.component.html
+++ b/src/app/main/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<app-search-bar></app-search-bar>
 <div class="grid">
     <div *ngFor="let product of productList">
         <app-product [product]="product"></app-product>
