--- a/src/app/main/product-list/product/product.component.html
+++ b/src/app/main/product-list/product/product.component.html
@@ -7,7 +7,7 @@
             <div class="col-6">
                 <span class="float-left"><h4>{{product.price}} $</h4></span>
             </div>
-            <div class="col-6">
+            <div *ngIf="userLoggedIn" class="col-6">
                 <button class="btn btn-primary float-right" (click)="addToCart()">Add to Cart</button>
             </div>
         </div>
