moved search bar left

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="products.length > 0 && isShopping">
+<div class="container" *ngIf="products.length > 0 && isShopping && userLoggedIn">
     <div class="row">
         <div class="col-6">
             <h4>Sum: {{ calculateSum() }} $</h4>
@@ -8,7 +8,7 @@
         </div>
     </div>
 </div>
-<div *ngIf="products.length > 0; else emptyCart">
+<div *ngIf="products.length > 0 && userLoggedIn; else emptyCart">
     <div class="cart" *ngFor="let product of products">
         <app-shopping-cart-item [product]="product" [amount]="amounts.get(product.id)"></app-shopping-cart-item>
     </div>
@@ -26,7 +26,7 @@
         </div>
     </div>
 </ng-template>
-<div class="container" *ngIf="products.length > 0 && isShopping">
+<div class="container" *ngIf="products.length > 0 && isShopping && userLoggedIn">
     <div class="row">
         <button (click)="proceedToCheckout()" class="btn btn-success col-10 offset-1 buy-button">Proceed to Checkout
         </button>
