--- a/src/app/main/product-list/search-bar/search-bar.component.html
+++ b/src/app/main/product-list/search-bar/search-bar.component.html
@@ -1,6 +1,22 @@
-<div class="search-bar">
-    <form class="form-group">
-        <input #term type="text" class="form-control" placeholder="Search.." name="search" (input)="onSearch(term.value)">
-        <button type="submit" class="btn btn-primary"><fa-icon [icon]="faSearch"></fa-icon></button>
-    </form>
+<div class="container">
+    <div class="row">
+        <div class="col-2">
+            <button class="btn btn-primary">Upload new Item</button>
+        </div>
+        <div class="col-6">
+            <div class="search-bar">
+                <form>
+                    <input #term type="text" class="form-control" placeholder="Search.." name="search"
+                           (input)="onSearch(term.value)">
+                </form>
+            </div>
+        </div>
+        <div class="col-2">
+            <button type="submit" class="btn btn-primary">
+                <fa-icon [icon]="faSearch"></fa-icon>
+            </button>
+        </div>
+    </div>
 </div>
+
+
