upload new item and send order

--- a/src/app/main/product-list/search-bar/search-bar.component.html
+++ b/src/app/main/product-list/search-bar/search-bar.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-2">
-            <button class="btn btn-primary">Upload new Item</button>
+            <a routerLink="/upload-item" class="btn btn-primary">Upload new Item</a>
         </div>
         <div class="col-6">
             <div class="search-bar">
